--- a/pages/shop-car/shop-car.wxss
+++ b/pages/shop-car/shop-car.wxss
@@ -10,8 +10,8 @@
   line-height: 80px
 }
 .car_goods .car_goods_m image{
-  width: 80px;
-  height: 80px;
+  width: 110px;
+  /* height: 80px; */
 }
 
 .car_goods .car_goods_mm{
