--- a/pages/discover/discover.wxss
+++ b/pages/discover/discover.wxss
@@ -46,7 +46,7 @@
 
 .discover-content-big{
   width: 100%;
-  height: 180px;
+  /* height: 180px; */
   padding: 1px;
   background-color: #ffffff;
   border-radius: 10px;
@@ -63,9 +63,10 @@
   width: 100%;  
 }  
 .search_arr {  
-  border: 1px solid #d0d0d0;  
-  border-radius: 10rpx;  
-  margin: 15px 15px;  
+  border: 1px solid #e2e2e2;  
+  border-radius: 20px;  
+  margin: 15px 15px 0 15px;
+  background-color: #ffffff
 }  
 .search_arr input{  
   margin-left: 60rpx;  
@@ -98,6 +99,7 @@
   width: 20px;  
   height: 20px;  
   text-align: center;  
+  padding-left: 5px
 } 
 /**end*/
 
@@ -273,3 +275,42 @@
   height: 50%;
 } */
 
+.discover-help{
+  text-align: center;
+  margin: 20px 0 10px 0;
+  font-size: 16px
+}
+
+.page_topic{
+  margin:15px;
+  background-color:#FAFAFA;
+  height:150px;
+  border-radius:10px;
+  box-shadow:2px 2px 5px #c2c2c2
+}
+
+.page_topic_content{
+  text-align:center;
+  padding:15px;
+  line-height:36px
+}
+
+.page_title{
+  color: #888888
+}
+
+.page_label{
+  color:#000000;
+  font-size:14px
+}
+
+.discover_fixed{
+  position:fixed;
+  right:10px;
+  bottom:70px
+}
+.discover_fixed_j{
+  position:fixed;
+  right:10px;
+  bottom:180px
+}
