--- a/pages/discover_detail_material/discover_detail_material.wxml
+++ b/pages/discover_detail_material/discover_detail_material.wxml
@@ -1,6 +1,9 @@
 <view class='disc_detail'>
+  <view style='position:absolute;right:15px'>
+    <image style='width:30px' src='http://p95v2ft9v.bkt.clouddn.com/%E5%88%86%E4%BA%AB.png' mode='widthFix'></image>
+  </view>
   <view class='dic_detail_banner'>
-    <image src='http://p95v2ft9v.bkt.clouddn.com/mall/%E6%96%B0%E5%93%81%E9%A6%96%E5%8F%91@2x.png'></image>
+    <image src='http://p95v2ft9v.bkt.clouddn.com/caizhi02.jpeg'></image>
   </view>
   <view class='dic_detail_swiper'>
     <scroll-view scroll-x class="dic_detail_swiper_scroll">
