--- a/pages/science_detail/science_detail.wxml
+++ b/pages/science_detail/science_detail.wxml
@@ -1,4 +1,4 @@
-<view class='page science_detail'>
+<!-- <view class='page science_detail'>
   <swiper class='swiper-image' indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imageUrl}}">
       <swiper-item>
@@ -9,5 +9,21 @@
   <view class='science_detail_c'>
     <view class='science_detail_title'>{{data.title}}</view>
     <view class='science_detail_content'>{{data.text}}</view>
+  </view>
+</view> -->
+<view style='position:absolute;right:15px'>
+  <image style='width:30px' src='http://p95v2ft9v.bkt.clouddn.com/%E5%88%86%E4%BA%AB.png' mode='widthFix'></image>
+</view>
+<view class='disc_detail'>
+  <view class='dic_detail_banner'>
+    <image src='{{image}}' mode='widthFix'></image>
+  </view>
+  <!-- <view class='dic_detail_swiper'>
+    <scroll-view scroll-x class="dic_detail_swiper_scroll">
+      <view class='dic_detail_swiper_item {{item.item_hasbgr}}' wx:for="{{list}}" style='display: inline-block' bindtap='showResult' data-id="{{item.id}}">{{item.label}}</view>
+    </scroll-view>
+  </view> -->
+  <view class='dic_detail_result'>
+    <view wx:for="{{result.text}}">{{item}}</view>
   </view>
 </view>
